Fix for your cards and cards images. Wrapped the whole main part into a container-lg to preserve max-width of 1200px for big-screens

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -12,6 +12,7 @@ $font-family-base: Andale Mono;
 
 body {
   margin: 20px;
+  width: 100vw;
 }
 
 header {
@@ -35,7 +36,23 @@ h3 {
 
 .container-md {
   margin-top: 70px;
-  margin-left: 250px;
+}
+
+.img-container {
+  height: 200px;
+  margin: auto;
+  margin-top: 1rem;
+
+  img {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+  }
+}
+
+.card {
+  margin: 1rem;
+  width: 280px;
 }
 
 .card-title {
@@ -49,16 +66,13 @@ h3 {
 }
 
 .card-deck {
-  margin: 50px 170px 50px 200px;
+  margin: 1rem;
+  margin-top: 100px;
 }
 
 .nav-link {
   color: white;
   font-family: Andale Mono;
-}
-
-.card-deck {
-  margin-top: 100px;
 }
 
 footer {
@@ -72,7 +86,7 @@ h6 {
   font-size: 23px;
 }
 
-img {
+header > img {
   height: 350px;
   width: 100px;
   padding: 35px;
